--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "java.checkstyle.configuration": "${workspaceFolder}/ud04/doc/checkstyle.xml",
     "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx2G -Xms100m -Xlog:disable",
     "java.project.sourcePaths": [
-        "ud04/daniellg.com"
+        "ud04/daniellg.com",
+        "ud04/doc"
     ]
 }
